# complexity-transfer-learning-experiment

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_experiments.sh
config/: __init__.py  dataset_registry.py  experiment_config.py  lm_experiment_config.py  lm_registry.py  lm_workflow.py  workflows.py
data/tiny-shakespare/: test.csv  train.csv  validation.csv
scripts/: reorganize_catsvsdogs.py
src/: dataset.py  experiment.py  language_model.py  lm_dataset.py  lm_experiment.py  lm_model_factory.py  lm_orchestrator.py  lm_trainer.py  main.py  model.py  orchestrator.py  trainer.py
utils/: complexity.py  optmizers.py  ploting.py  statistical_tests.py  statistics.py
